[package]
name = "vulkan-raytraced-voxels"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.25.6"
nalgebra = { version="0.33", features=["convert-bytemuck"] }
noise = "0.9.0"
partition = "0.1.2"
rand = "0.9.1"
rapier3d = "0.25.0"
serde = { version="1.0.219", features=["derive"] }
serde_json = "1.0.140"
threadpool = "1.8.1"
vulkano = "0.35"
vulkano-shaders = { version="0.35.0", features=["shaderc-debug"]}
ash = "0.38"
winit = "0.30"

# Add this to your Cargo.toml
[profile.dev.package.nalgebra]
opt-level = 3

# Add this to your Cargo.toml
[profile.dev.package.rapier3d]
opt-level = 3

# Add this to your Cargo.toml
[profile.dev.package.noise]
opt-level = 3

# Add this to your Cargo.toml
[profile.dev.package.rand]
opt-level = 3
